src/config/email/snapshots/roadster__config__email__tests__serialization@case_3.snap
---
source: src/config/email/mod.rs
expression: email
---
from = 'No Reply <no-reply@example.com>'
reply-to = 'No Reply <no-reply@example.com>'
[smtp.connection]
uri = 'smtps://username:password@smtp.example.com:425'

[sendgrid]
api-key = 'api-key'
https-only = true
